[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'mongo-taskqueue'
version = '0.1.4'
description = 'Queueing data structure on top of a MongoDB collection'
readme = 'README.md'
license = { text = 'MIT' }
maintainers = [
    { name = 'Shayan Amani', email = 'me@shayanamani.com' }
]
keywords = ['mongo', 'mongodb', 'queue', 'task', 'taskqueue']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = [
    'pymongo',
    'bson',
    'pandas',
]
requires-python = '>=3.8'

[project.urls]
Homepage = 'https://github.com/mms-analytics/mongo-taskqueue'
